syntax = "proto2";

package nl.amony.service.media.api;
import "scalapb/scalapb.proto";

message ResourceInfo {
  required string bucketId = 1;
  required string relativePath = 2;
  required string hash = 3;
  required uint64 sizeInBytes = 4;
}

message MediaMeta {
  option (scalapb.message).annotations = '@nl.amony.lib.EventId(id = "media_meta")';
  optional string title = 1;
  optional string comment = 2;
  repeated string tags = 3;
}

enum MediaKind {
  VIDEO = 0;
  IMAGE = 1;
  AUDIO = 2;
}

message MediaInfo {
  required string mediaType = 1;
  required uint32 width = 2;
  required uint32 height = 3;
  required float fps = 4;
  required uint64 durationInMillis = 5;
}

message MediaType {
  required string typeId = 1;
  required string mediaType = 2;
  required int32 scaleHeight = 3;
}

message MediaId {
  required string mediaId = 1;
}

message Media {
  required string mediaId = 1;
  required string mediaType = 2;
  required string userId = 3;
  required uint64 createdTimestamp = 4;
  required uint64 thumbnailTimestamp = 5;
  required MediaMeta meta = 6;
  required MediaInfo mediaInfo = 7;
  required ResourceInfo resourceInfo = 8;
  repeated MediaType availableFormats = 9;
}